--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0017.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0017.html
@@ -18,8 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1873 101 1957 142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XDI</ins>
-            <del title="nlp 0.90">XDI</del>
+            <ins title="nlp 2.00">XIII</ins>
           </span>
         </span>
       </span>
@@ -56,14 +55,12 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1111 214 1155 257">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ia</ins>
-            <del title="nlp 0.90">ia</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1198 213 1325 257">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iertio</ins>
-            <del title="nlp 0.90">iertio</del>
+            <ins title="nlp 2.00">tertio</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1363 211 1415 257">
@@ -86,8 +83,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1848 210 1895 270">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(l</ins>
-            <del title="nlp 0.90">(l</del>
+            <ins title="nlp 2.00">(i.</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1920 228 1955 258">
@@ -112,17 +108,7 @@
         </span>
         <span id="w_16" class="ocr_word" title="bbox 649 288 706 330">
           <span class="alternatives">
-            <ins title="nlp 2.00">26</ins>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 707 311 761 317">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_18" class="ocr_word" title="bbox 768 286 826 329">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">40</ins>
+            <ins title="nlp 2.00">26—40</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 857 290 1006 329">
@@ -202,9 +188,9 @@
             <ins title="nlp 2.00">„comm.</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1785 357 1956 400">
+        <span id="w_33_0" class="ocr_word" title="bbox 1785 357 1956 400">
           <span class="alternatives">
-            <ins title="nlp 2.00">notitiarum”</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -217,22 +203,17 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 455 431 506 473">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">31</ins>
+            <ins class="alt" title="nlp 2.00">31—34</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 515 455 570 462">
+        <span id="w_39_0" class="ocr_word" title="bbox 661 429 1090 487">
           <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 573 430 629 474">
+        <span id="w_39_1" class="ocr_word" title="bbox 661 429 1090 487">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">34</ins>
-          </span>
-        </span>
-        <span id="w_39" class="ocr_word" title="bbox 661 429 1090 487">
-          <span class="alternatives">
-            <ins title="nlp 2.00">„repugnautiarum"</ins>
+            <ins class="alt" title="nlp 2.00">,,repugnantiarum“</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1130 443 1192 486">
@@ -241,27 +222,20 @@
             <del title="nlp 0.90">cp.</del>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1221 427 1278 472" lang="grc">
+        <span id="w_41_0" class="ocr_word" title="bbox 1221 427 1278 472">
           <span class="alternatives">
-            <ins title="nlp 2.00">30 — 37</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_41_1" class="ocr_word" title="bbox 1221 427 1278 472">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">30—37.</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1470 425 1582 470">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Nam</ins>
             <del title="nlp 0.90">Nam</del>
-          </span>
-        </span>
-        <span id="w_43" class="ocr_word" title="bbox 1623 441 1721 471">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cum</ins>
-            <del title="nlp 0.90">cum</del>
-          </span>
-        </span>
-        <span id="w_44" class="ocr_word" title="bbox 1760 428 1958 472">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">univeraa</ins>
-            <del title="nlp 0.90">univeraa</del>
           </span>
         </span>
       </span>
@@ -274,8 +248,7 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 462 502 572 545">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ratiu</ins>
-            <del title="nlp 0.90">ratiu</del>
+            <ins title="nlp 2.00">ratio</ins>
           </span>
         </span>
         <span id="w_47" class="ocr_word" title="bbox 605 502 835 558">
@@ -292,8 +265,7 @@
         </span>
         <span id="w_49" class="ocr_word" title="bbox 990 499 1162 557">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">siuguhv</ins>
-            <del title="nlp 0.90">siuguhv</del>
+            <ins title="nlp 2.00">singula</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1194 499 1398 556">
@@ -433,8 +405,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1781 657 1956 701">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">repngn.</ins>
-            <del title="nlp 0.90">repngn.</del>
+            <ins title="nlp 2.00">repugn.</ins>
           </span>
         </span>
       </span>
@@ -525,8 +496,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 790 788 921 830">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inimo</ins>
-            <del title="nlp 0.90">inimo</del>
+            <ins title="nlp 2.00">immo</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 965 787 1137 829">
@@ -566,9 +536,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 214 855 1959 915">
-        <span id="w_95" class="ocr_word" title="bbox 551 861 607 903" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 551 861 607 903">
           <span class="alternatives">
-            <ins title="nlp 2.00">Εἰ·</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 551 861 607 903">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Εἰ</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 631 875 744 915" lang="grc">
@@ -601,11 +576,6 @@
             <ins title="nlp 2.00">ἐθέλοιεν</ins>
           </span>
         </span>
-        <span id="w_102" class="ocr_word" title="bbox 1848 857 1959 914" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμᾶς</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 212 927 1958 987">
         <span id="w_104" class="ocr_word" title="bbox 373 948 454 975" lang="grc">
@@ -613,9 +583,14 @@
             <ins title="nlp 2.00">— —</ins>
           </span>
         </span>
-        <span id="w_105" class="ocr_word" title="bbox 485 931 542 975" lang="grc">
+        <span id="w_105_0" class="ocr_word" title="bbox 485 931 542 975">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἂν</ins>
+            <ins class="alt" title="nlp 2.00">οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_105_1" class="ocr_word" title="bbox 485 931 542 975">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
           </span>
         </span>
         <span id="w_106" class="ocr_word" title="bbox 573 931 784 975" lang="grc">
@@ -656,8 +631,7 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1743 927 1958 973">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ciccronis</ins>
-            <del title="nlp 0.90">Ciccronis</del>
+            <ins title="nlp 2.00">Ciceronis</ins>
           </span>
         </span>
       </span>
@@ -707,15 +681,14 @@
             <del title="nlp 0.90">immortalibus</del>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 1718 1000 1886 1044">
+        <span id="w_122_0" class="ocr_word" title="bbox 1718 1000 1886 1044">
           <span class="alternatives">
-            <ins title="nlp 2.00">dicitis ”</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_123" class="ocr_word" title="bbox 1916 1005 1959 1045">
+        <span id="w_122_1" class="ocr_word" title="bbox 1718 1000 1886 1044">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">et</ins>
-            <del title="nlp 0.90">et</del>
+            <ins class="alt" title="nlp 2.00">dicitis“</ins>
           </span>
         </span>
       </span>
@@ -778,9 +751,9 @@
             <del title="nlp 0.90">nocere</del>
           </span>
         </span>
-        <span id="w_134" class="ocr_word" title="bbox 1889 1088 1959 1116">
+        <span id="w_134_0" class="ocr_word" title="bbox 1889 1088 1959 1116">
           <span class="alternatives">
-            <ins title="nlp 2.00">voluissent?”</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -803,8 +776,7 @@
         </span>
         <span id="w_139" class="ocr_word" title="bbox 837 1146 1080 1189">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eonferatur</ins>
-            <del title="nlp 0.90">eonferatur</del>
+            <ins title="nlp 2.00">conferatur</ins>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1111 1144 1326 1188">
@@ -900,8 +872,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 1292 1215 1511 1259">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Plutarehi</ins>
-            <del title="nlp 0.90">Plutarehi</del>
+            <ins title="nlp 2.00">Plutarchi</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1538 1215 1589 1258">
@@ -1002,23 +973,18 @@
             <del title="nlp 0.90">verbis</del>
           </span>
         </span>
-        <span id="w_173" class="ocr_word" title="bbox 1693 1289 1730 1331" lang="grc">
+        <span id="w_173_0" class="ocr_word" title="bbox 1693 1289 1730 1331">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὶ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_174" class="ocr_word" title="bbox 1763 1288 1812 1332" lang="grc">
+        <span id="w_173_1" class="ocr_word" title="bbox 1693 1289 1730 1331">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
+            <ins class="alt" title="nlp 2.00">εἰ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 213 1362 949 1419">
-        <span id="w_176" class="ocr_word" title="bbox 213 1374 342 1418">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀναιροῦσι</ins>
-          </span>
-        </span>
         <span id="w_177" class="ocr_word" title="bbox 374 1376 509 1418">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">usque</ins>
@@ -1193,9 +1159,9 @@
             <del title="nlp 0.90">probetur.</del>
           </span>
         </span>
-        <span id="w_205" class="ocr_word" title="bbox 1854 1576 1958 1632">
+        <span id="w_205_0" class="ocr_word" title="bbox 1854 1576 1958 1632">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,Repugnantiarum''</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1503,15 +1469,14 @@
             <del title="nlp 0.90">inferiorem</del>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 1737 2008 1892 2050">
+        <span id="w_261_0" class="ocr_word" title="bbox 1737 2008 1892 2050">
           <span class="alternatives">
-            <ins title="nlp 2.00">fuisse"</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1918 2012 1960 2051">
+        <span id="w_261_1" class="ocr_word" title="bbox 1737 2008 1892 2050">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">et</ins>
-            <del title="nlp 0.90">et</del>
+            <ins class="alt" title="nlp 2.00">fuisse“</ins>
           </span>
         </span>
       </span>
@@ -1678,19 +1643,19 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_292" class="ocr_word" title="bbox 1582 2293 1693 2338" lang="grc">
+        <span id="w_292_0" class="ocr_word" title="bbox 1582 2293 1693 2338">
           <span class="alternatives">
-            <ins title="nlp 2.00">kau</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 1712 2310 1791 2344" lang="grc">
+        <span id="w_292_1" class="ocr_word" title="bbox 1582 2293 1693 2338">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὒς</ins>
+            <ins class="alt" title="nlp 2.00">καθ᾿</ins>
           </span>
         </span>
-        <span id="w_294" class="ocr_word" title="bbox 1820 2296 1960 2347" lang="grc">
+        <span id="w_293_0" class="ocr_word" title="bbox 1712 2310 1791 2344">
           <span class="alternatives">
-            <ins title="nlp 2.00">μόνον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1772,8 +1737,7 @@
         </span>
         <span id="w_309" class="ocr_word" title="bbox 840 2440 1086 2491">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">raemorato,</ins>
-            <del title="nlp 0.90">raemorato,</del>
+            <ins title="nlp 2.00">memorato,</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1119 2441 1279 2492">
@@ -1807,21 +1771,19 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1605 2451 1701 2479">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cura</ins>
-            <del title="nlp 0.90">cura</del>
+            <ins title="nlp 2.00">cum</ins>
           </span>
         </span>
-        <span id="w_316" class="ocr_word" title="bbox 1734 2439 1959 2494">
+        <span id="w_316_0" class="ocr_word" title="bbox 1734 2439 1959 2494">
           <span class="alternatives">
-            <ins title="nlp 2.00">„repugn."</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 215 2507 1957 2566">
         <span id="w_317" class="ocr_word" title="bbox 215 2523 277 2565">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ep.</ins>
-            <del title="nlp 0.90">ep.</del>
+            <ins title="nlp 2.00">cp.</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 299 2509 356 2551">
@@ -1849,8 +1811,7 @@
         </span>
         <span id="w_322" class="ocr_word" title="bbox 770 2524 1016 2552">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">enuraerare</ins>
-            <del title="nlp 0.90">enuraerare</del>
+            <ins title="nlp 2.00">enumerare</ins>
           </span>
         </span>
         <span id="w_323" class="ocr_word" title="bbox 1047 2510 1225 2566">
@@ -2199,8 +2160,7 @@
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1255 2939 1341 2982">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Mtt.</ins>
-            <del title="nlp 0.90">Mtt.</del>
+            <ins title="nlp 2.00">Mü.</ins>
           </span>
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1404 2939 1471 2981">
@@ -2319,7 +2279,7 @@
         </span>
         <span id="w_404" class="ocr_word" title="bbox 1261 3082 1286 3125" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅ</ins>
+            <ins title="nlp 2.00">ἃ</ins>
           </span>
         </span>
         <span id="w_405" class="ocr_word" title="bbox 1319 3083 1425 3139" lang="grc">
