--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0019.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0019.html
@@ -43,8 +43,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 802 266 1000 311">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yidelicet</ins>
-            <del title="nlp 0.90">yidelicet</del>
+            <ins title="nlp 2.00">videlicet</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1027 282 1136 324">
@@ -55,8 +54,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1168 267 1309 311">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">miuus</ins>
-            <del title="nlp 0.90">miuus</del>
+            <ins title="nlp 2.00">minus</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1335 271 1437 325">
@@ -633,8 +631,7 @@
         </span>
         <span id="w_100" class="ocr_word" title="bbox 1636 984 1787 1041">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Neqne</ins>
-            <del title="nlp 0.90">Neqne</del>
+            <ins title="nlp 2.00">Neque</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 1824 1000 1963 1028">
@@ -984,8 +981,7 @@
       <span class="ocr_line" title="bbox 212 1554 1965 1616">
         <span id="w_157" class="ocr_word" title="bbox 212 1554 456 1599">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoieorum</ins>
-            <del title="nlp 0.90">Stoieorum</del>
+            <ins title="nlp 2.00">Stoicorum</ins>
           </span>
         </span>
         <span id="w_158" class="ocr_word" title="bbox 489 1556 650 1612">
@@ -1060,8 +1056,7 @@
         </span>
         <span id="w_170" class="ocr_word" title="bbox 644 1628 864 1673">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Phamace</ins>
-            <del title="nlp 0.90">Phamace</del>
+            <ins title="nlp 2.00">Pharnace</ins>
           </span>
         </span>
         <span id="w_171" class="ocr_word" title="bbox 892 1628 1038 1673">
@@ -1121,8 +1116,7 @@
         </span>
         <span id="w_181" class="ocr_word" title="bbox 901 1701 1053 1744">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Aëtius</ins>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1092 1702 1204 1745">
@@ -1182,8 +1176,7 @@
         </span>
         <span id="w_191" class="ocr_word" title="bbox 650 1788 744 1816">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aere</ins>
-            <del title="nlp 0.90">aere</del>
+            <ins title="nlp 2.00">aëre</ins>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 765 1773 891 1816">
@@ -1274,8 +1267,7 @@
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1811 1847 1963 1891">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Aëtius</ins>
           </span>
         </span>
       </span>
@@ -1408,12 +1400,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 2057 1962 2119">
-        <span id="w_229" class="ocr_word" title="bbox 209 2060 292 2114">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur,</ins>
-            <del title="nlp 0.90">disputantur,</del>
-          </span>
-        </span>
         <span id="w_230" class="ocr_word" title="bbox 325 2057 557 2116">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Chrysippi</ins>
@@ -1471,7 +1457,7 @@
       <span class="ocr_line" title="bbox 208 2128 1960 2192">
         <span id="w_239" class="ocr_word" title="bbox 208 2128 338 2186" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περὶ</ins>
+            <ins title="nlp 2.00">,,περὶ</ins>
           </span>
         </span>
         <span id="w_240" class="ocr_word" title="bbox 370 2147 450 2174" lang="grc">
@@ -1484,9 +1470,14 @@
             <ins class="alt" title="nlp 1.00">πρώτου</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 694 2134 898 2189" lang="grc">
+        <span id="w_242_0" class="ocr_word" title="bbox 694 2134 898 2189">
           <span class="alternatives">
-            <ins title="nlp 2.00">ψυχροῦ ”</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_242_1" class="ocr_word" title="bbox 694 2134 898 2189">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ψυχροῦ“</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 931 2148 1039 2189">
@@ -1511,12 +1502,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Chrysippum</ins>
             <del title="nlp 0.90">Chrysippum</del>
-          </span>
-        </span>
-        <span id="w_247" class="ocr_word" title="bbox 1755 2135 1960 2190">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">redolent,</ins>
-            <del title="nlp 0.90">redolent,</del>
           </span>
         </span>
       </span>
@@ -1547,17 +1532,7 @@
         </span>
         <span id="w_252" class="ocr_word" title="bbox 658 2206 682 2246">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">9</ins>
-          </span>
-        </span>
-        <span id="w_253" class="ocr_word" title="bbox 686 2230 742 2236">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 749 2206 802 2247">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">12</ins>
+            <ins class="alt" title="nlp 2.00">9—12</ins>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 835 2208 1089 2263">
@@ -1630,7 +1605,7 @@
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1609 2277 1678 2336" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins title="nlp 2.00">(ἐν</ins>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1709 2295 1770 2321" lang="grc">
@@ -1735,8 +1710,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1042 2421 1272 2476">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">praefaiida</ins>
-            <del title="nlp 0.90">praefaiida</del>
+            <ins title="nlp 2.00">praefanda</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1303 2424 1436 2477">
@@ -1807,19 +1781,18 @@
             <del title="nlp 0.90">spectant</del>
           </span>
         </span>
-        <span id="w_296" class="ocr_word" title="bbox 1649 2493 1772 2536">
+        <span id="w_296_0" class="ocr_word" title="bbox 1649 2493 1772 2536">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">valde</ins>
-            <del title="nlp 0.90">valde</del>
+            <ins class="alt" title="nlp 2.00">valde</ins>
+          </span>
+        </span>
+        <span id="w_296_1" class="ocr_word" title="bbox 1649 2493 1772 2536">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">dolendum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 2560 419 2604">
-        <span id="w_298" class="ocr_word" title="bbox 209 2560 310 2603">
-          <span class="alternatives">
-            <ins title="nlp 2.00">dolendum</ins>
-          </span>
-        </span>
         <span id="w_299" class="ocr_word" title="bbox 342 2564 419 2604">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">est.</ins>
@@ -1943,9 +1916,9 @@
             <ins title="nlp 2.00">„de</ins>
           </span>
         </span>
-        <span id="w_319" class="ocr_word" title="bbox 1755 2711 1958 2768">
+        <span id="w_319_0" class="ocr_word" title="bbox 1755 2711 1958 2768">
           <span class="alternatives">
-            <ins title="nlp 2.00">repugn."</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1997,14 +1970,14 @@
             <del title="nlp 0.90">comm.</del>
           </span>
         </span>
-        <span id="w_328" class="ocr_word" title="bbox 1699 2783 1812 2825">
+        <span id="w_328_0" class="ocr_word" title="bbox 1699 2783 1812 2825">
           <span class="alternatives">
-            <ins title="nlp 2.00">not."</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_329" class="ocr_word" title="bbox 1837 2797 1959 2825">
+        <span id="w_328_1" class="ocr_word" title="bbox 1699 2783 1812 2825">
           <span class="alternatives">
-            <ins title="nlp 2.00">usurpentur</ins>
+            <ins class="alt" title="nlp 2.00">not.“</ins>
           </span>
         </span>
       </span>
