--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0020.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0020.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 257 167 1252 203">
         <span id="w_0" class="ocr_word" title="bbox 257 167 374 203">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XVm</ins>
-            <del title="nlp 0.90">XVm</del>
+            <ins title="nlp 2.00">XVIII</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 988 167 1252 201">
@@ -32,8 +31,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 498 275 788 330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">antiquiorura</ins>
-            <del title="nlp 0.90">antiquiorura</del>
+            <ins title="nlp 2.00">antiquiorum</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 819 274 1000 316">
@@ -88,8 +86,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 445 346 661 388">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">doctriuae</ins>
-            <del title="nlp 0.90">doctriuae</del>
+            <ins title="nlp 2.00">doctrinae</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 693 344 909 387">
@@ -266,8 +263,7 @@
         </span>
         <span id="w_43" class="ocr_word" title="bbox 1045 554 1113 597">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Illi</ins>
-            <del title="nlp 0.90">Illi</del>
+            <ins title="nlp 2.00">Illi</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1152 555 1262 597">
@@ -1631,8 +1627,7 @@
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1633 2188 1841 2243">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iutegram</ins>
-            <del title="nlp 0.90">iutegram</del>
+            <ins title="nlp 2.00">integram</ins>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1879 2185 1994 2227">
