--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0021.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0021.html
@@ -18,8 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1843 170 1927 207">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XIX</ins>
-            <del title="nlp 0.90">XIX</del>
+            <ins title="nlp 2.00">XIX</ins>
           </span>
         </span>
       </span>
@@ -32,8 +31,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 818 291 1023 336">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Philoue</ins>
-            <del title="nlp 0.90">Philoue</del>
+            <ins title="nlp 2.00">Philone</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1056 290 1398 336">
@@ -46,8 +44,7 @@
       <span class="ocr_line" title="bbox 301 372 1929 430">
         <span id="w_5" class="ocr_word" title="bbox 301 377 483 422">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Diyersft</ins>
-            <del title="nlp 0.90">Diyersft</del>
+            <ins title="nlp 2.00">Diversa</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 514 376 568 420">
@@ -70,14 +67,12 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 775 379 918 419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tameu</ins>
-            <del title="nlp 0.90">tameu</del>
+            <ins title="nlp 2.00">tamen</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 950 376 1106 419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">siniilia</ins>
-            <del title="nlp 0.90">siniilia</del>
+            <ins title="nlp 2.00">similia</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1132 378 1232 418">
@@ -366,8 +361,7 @@
         </span>
         <span id="w_57" class="ocr_word" title="bbox 1722 660 1928 717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sapieutis</ins>
-            <del title="nlp 0.90">sapieutis</del>
+            <ins title="nlp 2.00">sapientis</ins>
           </span>
         </span>
       </span>
@@ -436,8 +430,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 240 809 381 849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yetere</ins>
-            <del title="nlp 0.90">yetere</del>
+            <ins title="nlp 2.00">vetere</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 413 806 550 863">
@@ -677,8 +670,7 @@
         </span>
         <span id="w_107" class="ocr_word" title="bbox 422 1090 642 1133">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Philoueis</ins>
-            <del title="nlp 0.90">Philoueis</del>
+            <ins title="nlp 2.00">Philoneis</ins>
           </span>
         </span>
         <span id="w_108" class="ocr_word" title="bbox 674 1090 727 1133">
@@ -695,8 +687,7 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 899 1090 1036 1147">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niagis</ins>
-            <del title="nlp 0.90">niagis</del>
+            <ins title="nlp 2.00">magis</ins>
           </span>
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1080 1104 1207 1145">
@@ -719,8 +710,7 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1515 1088 1817 1132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">attendeudum</ins>
-            <del title="nlp 0.90">attendeudum</del>
+            <ins title="nlp 2.00">attendendum</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1862 1089 1931 1146">
@@ -763,14 +753,12 @@
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1143 1161 1302 1203">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">seusim</ins>
-            <del title="nlp 0.90">seusim</del>
+            <ins title="nlp 2.00">sensim</ins>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1346 1160 1641 1204">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">deflectuutur.</ins>
-            <del title="nlp 0.90">deflectuutur.</del>
+            <ins title="nlp 2.00">deflectuntur.</ins>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1702 1160 1798 1203">
@@ -824,8 +812,7 @@
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1421 1247 1507 1275">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uuo</ins>
-            <del title="nlp 0.90">uuo</del>
+            <ins title="nlp 2.00">uno</ins>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1539 1232 1771 1288">
@@ -849,8 +836,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 436 1305 586 1348">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">alieuis</ins>
-            <del title="nlp 0.90">alieuis</del>
+            <ins title="nlp 2.00">alienis</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 618 1305 882 1361">
@@ -867,8 +853,7 @@
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1085 1319 1185 1346">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vcro</ins>
-            <del title="nlp 0.90">vcro</del>
+            <ins title="nlp 2.00">vero</ins>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1218 1307 1306 1347">
@@ -1090,21 +1075,19 @@
         </span>
         <span id="w_177" class="ocr_word" title="bbox 1740 1735 1784 1778">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
-        <span id="w_178" class="ocr_word" title="bbox 1809 1733 1935 1791">
+        <span id="w_178_0" class="ocr_word" title="bbox 1809 1733 1935 1791">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,Epicureis''</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 1806 1934 1864">
         <span id="w_180" class="ocr_word" title="bbox 378 1808 637 1852">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">examiuavit</ins>
-            <del title="nlp 0.90">examiuavit</del>
+            <ins title="nlp 2.00">examinavit</ins>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 656 1806 831 1850">
@@ -1115,8 +1098,7 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 893 1806 944 1850">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lu</ins>
-            <del title="nlp 0.90">lu</del>
+            <ins title="nlp 2.00">In</ins>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 968 1806 1051 1849">
@@ -1183,8 +1165,7 @@
         </span>
         <span id="w_193" class="ocr_word" title="bbox 682 1878 901 1922">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Posidouii</ins>
-            <del title="nlp 0.90">Posidouii</del>
+            <ins title="nlp 2.00">Posidonii</ins>
           </span>
         </span>
         <span id="w_194" class="ocr_word" title="bbox 932 1881 975 1922">
@@ -1195,8 +1176,7 @@
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1007 1878 1201 1921">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Pauaetii</ins>
-            <del title="nlp 0.90">Pauaetii</del>
+            <ins title="nlp 2.00">Panaetii</ins>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1232 1881 1417 1921">
@@ -1356,8 +1336,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 676 2093 977 2138">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cicerouianae</ins>
-            <del title="nlp 0.90">Cicerouianae</del>
+            <ins title="nlp 2.00">Ciceronianae</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 1021 2093 1269 2151">
@@ -1380,8 +1359,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1523 2093 1808 2151">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Autiochum)</ins>
-            <del title="nlp 0.90">Autiochum</del>
+            <ins title="nlp 2.00">Antiochum)</ins>
           </span>
         </span>
         <span id="w_227" class="ocr_word" title="bbox 1853 2093 1936 2149">
@@ -1473,8 +1451,7 @@
         </span>
         <span id="w_242" class="ocr_word" title="bbox 609 2239 899 2297">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coguitiouem</ins>
-            <del title="nlp 0.90">coguitiouem</del>
+            <ins title="nlp 2.00">cognitionem</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 933 2237 1080 2282">
@@ -1559,8 +1536,7 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1535 2309 1684 2352">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">deiude</ins>
-            <del title="nlp 0.90">deiude</del>
+            <ins title="nlp 2.00">deinde</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 1716 2309 1938 2352">
@@ -1614,8 +1590,7 @@
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1677 2381 1792 2424">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">huuc</ins>
-            <del title="nlp 0.90">huuc</del>
+            <ins title="nlp 2.00">hunc</ins>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1824 2380 1938 2423">
@@ -1737,8 +1712,7 @@
         </span>
         <span id="w_287" class="ocr_word" title="bbox 1457 2523 1663 2568">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ciceroue</ins>
-            <del title="nlp 0.90">Ciceroue</del>
+            <ins title="nlp 2.00">Cicerune</ins>
           </span>
         </span>
         <span id="w_288" class="ocr_word" title="bbox 1700 2525 1752 2567">
@@ -1763,8 +1737,7 @@
         </span>
         <span id="w_291" class="ocr_word" title="bbox 517 2598 781 2641">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">asceudatur.</ins>
-            <del title="nlp 0.90">asceudatur.</del>
+            <ins title="nlp 2.00">ascendatur.</ins>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 843 2596 993 2653">
@@ -1861,8 +1834,7 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 1657 2669 1806 2712">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">deiude</ins>
-            <del title="nlp 0.90">deiude</del>
+            <ins title="nlp 2.00">deinde</ins>
           </span>
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1833 2668 1939 2712">
@@ -1874,8 +1846,7 @@
       <span class="ocr_line" title="bbox 195 2739 1938 2799">
         <span id="w_310" class="ocr_word" title="bbox 434 2740 582 2784">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">deiude</ins>
-            <del title="nlp 0.90">deiude</del>
+            <ins title="nlp 2.00">deinde</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 621 2742 711 2798">
@@ -2265,17 +2236,11 @@
         </span>
         <span id="w_376" class="ocr_word" title="bbox 1753 3091 1858 3127">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">laudi</ins>
-            <del title="nlp 0.90">laudi</del>
+            <ins title="nlp 2.00">laudi  invitus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 199 3146 539 3182">
-        <span id="w_378" class="ocr_word" title="bbox 199 3147 295 3182">
-          <span class="alternatives">
-            <ins title="nlp 2.00">invitus</ins>
-          </span>
-        </span>
         <span id="w_379" class="ocr_word" title="bbox 323 3146 539 3182">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">obtrectavi.</ins>
