--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0023.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0023.html
@@ -12,27 +12,24 @@
       <span class="ocr_line" title="bbox 924 181 1937 219">
         <span id="w_0" class="ocr_word" title="bbox 924 182 1189 219">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">PEAEFATIO</ins>
+            <ins title="nlp 2.00">PRAEFATIO</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1856 181 1937 217">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXI</ins>
-            <del title="nlp 0.90">XXI</del>
+            <ins title="nlp 2.00">XXI</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 198 288 1937 347">
         <span id="w_2" class="ocr_word" title="bbox 198 292 466 338">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">commodaia</ins>
-            <del title="nlp 0.90">commodaia</del>
+            <ins title="nlp 2.00">commodata</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 508 294 626 347">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suni;</ins>
-            <del title="nlp 0.90">suni;</del>
+            <ins title="nlp 2.00">sunt;</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 671 292 799 335">
@@ -43,8 +40,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 838 290 1043 347">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sapientis</ins>
-            <del title="nlp 0.90">sapientis</del>
+            <ins title="nlp 2.00">sapientis</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1086 290 1210 346">
@@ -55,25 +51,22 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1256 288 1423 333">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yidetur</ins>
-            <del title="nlp 0.90">yidetur</del>
+            <ins title="nlp 2.00">videtur</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1465 289 1673 333">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">obliviBci.</ins>
-            <del title="nlp 0.90">obliviBci.</del>
+            <ins title="nlp 2.00">oblivisci.</ins>
           </span>
         </span>
-        <span id="w_9" class="ocr_word" title="bbox 1736 289 1798 332">
+        <span id="w_10_0" class="ocr_word" title="bbox 1830 293 1855 343">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cf.</ins>
-            <del title="nlp 0.90">Cf.</del>
+            <ins class="alt" title="nlp 2.00">Cf.</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1830 293 1855 343">
+        <span id="w_10_1" class="ocr_word" title="bbox 1830 293 1855 343">
           <span class="alternatives">
-            <ins title="nlp 2.00">Cf.</ins>
+            <ins class="alt" title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1881 291 1937 334">
@@ -210,9 +203,14 @@
             <ins title="nlp 2.00">„medendi</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 440 506 647 551">
+        <span id="w_34_0" class="ocr_word" title="bbox 440 506 647 551">
           <span class="alternatives">
-            <ins title="nlp 2.00">facultas"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_34_1" class="ocr_word" title="bbox 440 506 647 551">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">facultas“</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 684 507 931 562">
@@ -243,12 +241,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">nos</ins>
             <del title="nlp 0.90">nos</del>
-          </span>
-        </span>
-        <span id="w_40" class="ocr_word" title="bbox 1753 504 1937 549">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diximus</ins>
-            <del title="nlp 0.90">diximus</del>
           </span>
         </span>
       </span>
@@ -355,8 +347,7 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1111 648 1268 692">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">affectn</ins>
-            <del title="nlp 0.90">affectn</del>
+            <ins title="nlp 2.00">affectu</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 1298 648 1555 707">
@@ -635,8 +626,7 @@
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1264 1007 1399 1050">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cuiyis</ins>
-            <del title="nlp 0.90">cuiyis</del>
+            <ins title="nlp 2.00">cuivis</ins>
           </span>
         </span>
         <span id="w_106" class="ocr_word" title="bbox 1431 1006 1706 1050">
@@ -1257,22 +1247,12 @@
       <span class="ocr_line" title="bbox 185 1721 1929 1781">
         <span id="w_207" class="ocr_word" title="bbox 185 1721 230 1779">
           <span class="alternatives">
-            <ins title="nlp 2.00">(§</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 257 1724 312 1766">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">28</ins>
-          </span>
-        </span>
-        <span id="w_209" class="ocr_word" title="bbox 314 1747 373 1754">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_210" class="ocr_word" title="bbox 375 1723 464 1781">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">79),</ins>
+            <ins class="alt" title="nlp 2.00">28—79),</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 495 1724 628 1766">
@@ -1882,30 +1862,19 @@
             <del title="nlp 0.90">sententia</del>
           </span>
         </span>
-        <span id="w_314" class="ocr_word" title="bbox 1411 2440 1602 2498">
+        <span id="w_314_0" class="ocr_word" title="bbox 1411 2440 1602 2498">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disputat</ins>
-            <del title="nlp 0.90">disputat</del>
+            <ins class="alt" title="nlp 2.00">disputat</ins>
           </span>
         </span>
-        <span id="w_315" class="ocr_word" title="bbox 1645 2438 1690 2498">
+        <span id="w_314_1" class="ocr_word" title="bbox 1411 2440 1602 2498">
           <span class="alternatives">
-            <ins title="nlp 2.00">(§</ins>
+            <ins class="alt" title="nlp 2.00">(§</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1716 2440 1770 2482">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">29</ins>
-          </span>
-        </span>
-        <span id="w_317" class="ocr_word" title="bbox 1774 2464 1832 2471">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_318" class="ocr_word" title="bbox 1834 2438 1923 2499">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">31),</ins>
+            <ins class="alt" title="nlp 2.00">29—31),</ins>
           </span>
         </span>
       </span>
@@ -2007,9 +1976,14 @@
             <del title="nlp 0.90">sententiam</del>
           </span>
         </span>
-        <span id="w_335" class="ocr_word" title="bbox 921 2583 1186 2641">
+        <span id="w_335_0" class="ocr_word" title="bbox 921 2583 1186 2641">
           <span class="alternatives">
-            <ins title="nlp 2.00">viderimus,"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_335_1" class="ocr_word" title="bbox 921 2583 1186 2641">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">viderimus,“</ins>
           </span>
         </span>
         <span id="w_336" class="ocr_word" title="bbox 1231 2584 1283 2627">
@@ -2030,12 +2004,6 @@
             <del title="nlp 0.90">transit,</del>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 1801 2584 1922 2628">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cuius</ins>
-            <del title="nlp 0.90">cuius</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 179 2653 1923 2714">
         <span id="w_340" class="ocr_word" title="bbox 179 2653 434 2698">
@@ -2051,17 +2019,7 @@
         </span>
         <span id="w_342" class="ocr_word" title="bbox 519 2656 572 2699">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">32</ins>
-          </span>
-        </span>
-        <span id="w_343" class="ocr_word" title="bbox 578 2680 631 2687">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_344" class="ocr_word" title="bbox 636 2656 686 2699">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">51</ins>
+            <ins class="alt" title="nlp 2.00">32—51</ins>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 726 2657 968 2714">
@@ -2433,8 +2391,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 563 3166 667 3202">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUo</ins>
-            <del title="nlp 0.90">nuUo</del>
+            <ins title="nlp 2.00">nullo</ins>
           </span>
         </span>
         <span id="w_407" class="ocr_word" title="bbox 694 3167 803 3202">
